--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,6 +7,10 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=true
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
+code.analysis.excludes=
+file.reference.ceppp2-cache=cache
+ignore.path=\
+    ${file.reference.ceppp2-cache}
 include.path=${php.global.include.path}
 php.version=PHP_70
 source.encoding=UTF-8
